force-app/main/default/objects/HomeysToken__c/HomeysToken__c.object-meta.xml
<CustomObject>
    <label>Homeys Token</label>
    <nameField>
        <label>Homeys Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homeys Token</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>