force-app/main/default/objects/HomeysToken__c/fields/IssuedAt__c.field-meta.xml
<CustomField>
    <fullName>IssuedAt__c</fullName>
    <label>Issued At</label>
    <type>DateTime</type>
</CustomField>